# plumbum

./: .appveyor.xml  .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .pep8  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  appveyor.yml  build.py  dev-requirements.txt  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_issue.py  todo.txt  translations.py
.ci/: travis.sh
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
clitools/clitools/: ssh.py
conda.recipe/: .gitignore  README.mkd  build.sh  meta.yaml
docs/: Makefile  _cheatsheet.rst  _color_list.html  _news.rst  about.rst  api.rst  async_support.rst  changelog.rst  cli.rst  color.rst  colorlib.rst  colors.rst  conf.py  copier.py  index.rst  local.rst  local_commands.rst  local_machine.rst  local_object.rst  local_path.rst  make.bat  news.rst  path.rst  paths.rst  quickref.rst  remote.rst  remote_machine.rst  remote_path.rst  ssh.rst  typed_env.rst  utils.rst
docs/_static/: custom.css
docs/api/: atomic.rst  cli.rst  color.rst  colors.rst  commands.rst  fs.rst  local_machine.rst  machines.rst  path.rst  remote_machine.rst  session.rst  unixutils.rst  utils.rst
docs/whatsnew/: whatsnew1_3.rst
examples/: .gitignore  SimpleColorCLI.py  alignment.py  async_cmd_import.py  async_example.py  async_hybrid.py  async_modifiers.py  async_remote.py  color.py  filecopy.py  fullcolor.py  geet.py  make_figures.py  simple_cli.py  testfigure.tex
experimental/: interact.py  paramiko_rpyc.py  paramiko_tunnel_reactor.py
experiments/: ipython_automagic.py  parallel.py  test_parallel.py
httptools/: httptools.py
old_plumbum/: commands.py  path.py  remotecmd.py  ssh.py  version.py
plumbum/: __init__.py  _testtools.py  async_cmd.py  atomic.py  base.py  cli.py  cmd.py  colors.py  commands.py  daemons.py  fileutils.py  lib.py  local.py  local_machine.py  localcmd.py  paramiko_machine.py  path.py  remote.py  remote_machine.py  remote_path.py  remotecmd.py  session.py  ssh.py  terminal.py  todo.txt  typed_env.py  unixutils.py  utils.py  version.py  version.pyi
plumbum/_compat/: typing.py
plumbum/cli/: __init__.py  application.py  argcompleter.py  color.py  compapplication.py  config.py  i18n.py  image.py  progress.py  switches.py  terminal.py  termsize.py
plumbum/cli/i18n/: de.po  fr.po  nl.po  ru.po
plumbum/cli/i18n/de/LC_MESSAGES/: plumbum.cli.mo
plumbum/cli/i18n/fr/LC_MESSAGES/: plumbum.cli.mo
plumbum/cli/i18n/nl/LC_MESSAGES/: plumbum.cli.mo
plumbum/cli/i18n/ru/LC_MESSAGES/: plumbum.cli.mo
plumbum/color/: __init__.py  __main__.py  base.py  color.py  factories.py  names.py  styles.py
plumbum/colorlib/: __init__.py  __main__.py  _ipython_ext.py  factories.py  image.py  names.py  styles.py
plumbum/commands/: __init__.py  _daemon_launcher.py  async_.py  base.py  daemon_launcher.py  daemons.py  modifiers.py  processes.py
plumbum/fs/: __init__.py  atomic.py  mounts.py
plumbum/machines/: __init__.py  _windows.py  base.py  env.py  local.py  multi.py  parallel.py  paramiko_machine.py  remote.py  session.py  ssh_machine.py
plumbum/path/: __init__.py  base.py  local.py  remote.py  utils.py
plumbum/plumbum/: __init__.py  local_commands.py  localcmd.py  path.py  remotecmd.py  ssh.py  ssh_commands.py  test.txt
plumbum/tests/: test_local.py
plumbum2/: cli.py  commands.py  local.py  path.py  remote.py
shelltools/shelltools/: cli.py  cmds.py  ssh.py
shtools/shtools/: __init__.py  cmds.py  path.py  ssh.py
tests/: .coveragerc  SimpleApp.py  _test_paramiko.py  conftest.py  env.py  example.py  posix_cmd.py  pytest.ini  slow_process.bash  test_3_cli.py  test_argcompleter.py  test_async_local.py  test_async_remote.py  test_atomic_extra.py  test_autocomplete.py  test_basecolors.py  test_cli.py  test_cli_annotations.py  test_clicolor.py  test_color.py  test_colornames.py  test_config.py  test_daemon_launcher.py  test_env.py  test_examples.py  test_factories.py  test_issue_795.py  test_lib.py  test_local.py  test_mounts.py  test_multi.py  test_nohup.py  test_parallel.py  test_pipelines.py  test_progress_extra.py  test_putty.py  test_remote.py  test_remote_path_logic.py  test_remote_quoting.py  test_ssh_paths.py  (+9 more)
