[metadata]
name = plumbum
author = Tomer Filiba
author_email = tomerfiliba@gmail.com
license = MIT
description = Plumbum: shell combinators library
keywords =
    path,
    local,
    remote,
    ssh,
    shell,
    pipe,
    popen,
    process,
    execution,
    color,
    cli
url = https://plumbum.readthedocs.io
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools
    Topic :: System :: Systems Administration
platforms = POSIX, Windows
provides = plumbum

[options]
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4
packages = find:
install_requires =
    pypiwin32; platform_system=='Windows' and platform_python_implementation!="PyPy"
 
[options.package_data]
plumbum.cli = i18n/*/LC_MESSAGES/*.mo

[options.extras_require]
ssh =
    paramiko; python_version >='2.7'
dev =
    pytest
    pytest-cov
    pytest-mock
    pytest-timeout
    paramiko
    psutil
docs =
    recommonmark >=0.5.0
    Sphinx >=3.0.0
    sphinx_rtd_theme >=0.5.0

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -v -ra --cov-config=setup.cfg
norecursedirs = examples experiments
timeout = 300

[coverage:run]
branch = True
relative_files = True
source_pkgs =
    plumbum
omit =
    *ipython*.py
    *__main__.py
    *_windows.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
