[metadata]
name = plumbum
description = Plumbum: shell combinators library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://plumbum.readthedocs.io
author = Tomer Filiba
author_email = tomerfiliba@gmail.com
license = MIT
license_file = LICENSE
platforms = POSIX, Windows
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: System :: Systems Administration
keywords =
    path,
    local,
    remote,
    ssh,
    shell,
    pipe,
    popen,
    process,
    execution,
    color,
    cli
provides = plumbum

[options]
packages = find:
install_requires =
    pypiwin32;platform_system=='Windows' and platform_python_implementation!="PyPy"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    paramiko
    psutil
    pytest
    pytest-cov
    pytest-mock
    pytest-timeout
docs =
    Sphinx>=3.0.0
    sphinx-rtd-theme>=0.5.0
ssh =
    paramiko

[options.package_data]
plumbum.cli = i18n/*/LC_MESSAGES/*.mo

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -v -ra --cov-config=setup.cfg
norecursedirs = examples experiments
required_plugins = pytest-timeout pytest-mock
timeout = 300
optional_tests =
    ssh: requires self ssh access to run
    sudo: requires sudo access to run

[coverage:run]
branch = True
relative_files = True
source_pkgs =
    plumbum
omit =
    *ipython*.py
    *__main__.py
    *_windows.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[flake8]
max-complexity = 50
ignore = E203, E231, E501, E722, W503, B950, B904, B003, B008, E731, B902
select = C,E,F,W,B,B9

[tool:isort]
profile = black
multi_line_output = 3

[check-manifest]
ignore =
    .*
    docs/**
    examples/*
    experiments/*
    conda.recipe/*
    CONTRIBUTING.rst
