[metadata]
name = plumbum
description = Plumbum: shell combinators library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://plumbum.readthedocs.io
author = Tomer Filiba
author_email = tomerfiliba@gmail.com
license = MIT
license_file = LICENSE
platforms = POSIX, Windows
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
    Topic :: System :: Systems Administration
keywords =
    path,
    local,
    remote,
    ssh,
    shell,
    pipe,
    popen,
    process,
    execution,
    color,
    cli
provides = plumbum

[options]
packages = find:
install_requires =
    pywin32;platform_system=='Windows' and platform_python_implementation!="PyPy"
python_requires = >=3.6

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    paramiko
    psutil
    pytest>=6.0
    pytest-cov
    pytest-mock
    pytest-timeout
docs =
    Sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
ssh =
    paramiko

[options.package_data]
plumbum.cli = i18n/*/LC_MESSAGES/*.mo

[coverage:run]
branch = True
relative_files = True
source_pkgs =
    plumbum
omit =
    *ipython*.py
    *__main__.py
    *_windows.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

[flake8]
max-complexity = 50
extend-ignore = E203, E501, E722, B950, E731
select = C,E,F,W,B,B9

[codespell]
ignore-words-list = ans,switchs,hart,ot,twoo,fo
skip = *.po
